--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -6,3 +6,7 @@ freeze: true
 
 # Enable banner style title blocks
 title-block-banner: true
+
+comments: 
+  utterances: 
+    repo:  p-j-smith/p-j-smith.github.io.comments
